--- a/styles/globals.css
+++ b/styles/globals.css
@@ -542,3 +542,92 @@ a {
  }
 
 
+
+ 
+
+.expedia-popup .modal-content {
+  border-radius: 12px;
+  padding: 20px;
+  background: #fff;
+  margin-top: 5rem;
+}
+
+.expedia-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  position: relative;
+}
+
+.expedia-logo img {
+  width: 12rem;
+  position: absolute;
+  top: -3rem;
+}
+
+.expedia-buttons .btn {
+  width: 100%;
+  font-weight: 600;
+  background: #1156bb;
+  border: none;
+  padding: 12px;
+}
+
+.phone-offer {
+  background-color: #e78915;
+  color: #fff;
+  font-weight: bold;
+}
+
+.agent-image {
+  width: 75px;
+  border-radius: 50%;
+  border: 4px solid green;
+}
+
+.plane-img {
+  width: 10rem;
+  margin-right: 20px;
+}
+
+.modal-header {
+  border-bottom: none;
+}
+
+@media (max-width: 576px) {
+  .expedia-logo img {
+    width: 16rem;
+    top: -3rem;
+  }
+
+  .plane-img {
+    width: 14rem;
+    margin-right: 10px;
+  }
+
+  .agent-image {
+    width: 85px;
+    border: 3px solid green;
+  }
+
+  .phone-offer {
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .modal-body h4 {
+    font-size: 28px;
+    font-weight: 700;
+  }
+
+  .modal-body p {
+    font-size: 0.95rem;
+  }
+
+  .expedia-buttons .col-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
