--- a/styles/globals.css
+++ b/styles/globals.css
@@ -548,7 +548,7 @@ a {
 .expedia-popup .modal-content {
   border-radius: 12px;
   padding: 20px;
-  background: #fff;
+  background: #05203D;
   margin-top: 5rem;
 }
 
@@ -569,10 +569,9 @@ a {
 
 .expedia-buttons .btn {
   width: 100%;
-  font-weight: 600;
-  background: #1156bb;
-  border: none;
-  padding: 12px;
+  background: #05203D;
+  border-radius:100px;
+  padding: 5px;
 }
 
 .phone-offer {
@@ -582,9 +581,8 @@ a {
 }
 
 .agent-image {
-  width: 75px;
+  width: 30%;
   border-radius: 50%;
-  border: 4px solid green;
 }
 
 .plane-img {
@@ -631,3 +629,36 @@ a {
     max-width: 50%;
   }
 }
+
+.modal-number-container {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1156bb;
+  color: white;
+  margin : 10px;
+  border-radius :100px; 
+  padding :10px;
+
+}
+
+
+
+.modal-number-container  h4 {
+  
+  font-size: 20px;
+
+
+ }
+.content-center {
+  border-radius: 20px 20px 0 0;
+    background: white;
+    
+} 
+.modal-footer-custom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center ;
+  color : white
+} 
