--- a/styles/globals.css
+++ b/styles/globals.css
@@ -596,8 +596,7 @@ a {
 
 @media (max-width: 576px) {
   .expedia-logo img {
-    width: 16rem;
-    top: -3rem;
+    width: 50%;
   }
 
   .plane-img {
@@ -606,8 +605,7 @@ a {
   }
 
   .agent-image {
-    width: 85px;
-    border: 3px solid green;
+    width: 50%;
   }
 
   .phone-offer {
@@ -621,13 +619,10 @@ a {
   }
 
   .modal-body p {
-    font-size: 0.95rem;
+    font-size: 17px;
   }
 
-  .expedia-buttons .col-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
+
 }
 
 .modal-number-container {
